# MapFree

./: .flake8  .gitignore  .mapfree_state.json  APPLY_COLMAP_FIX_ON_DEVELOP.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR_GUIDE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  SETUP_POPOS.md  backup_mapfree.sh  colmap  colmap_bin_fix.patch  database.db  database.db-shm  database.db-wal  environment.yml  mapfree.spec  pyproject.toml  requirements.txt  run_colmap_mx150.sh  run_mapfree.bat  setup.cfg
.cursor/rules/: mapfree.mdc
.github/workflows/: ci.yml  release.yml
assets/: README.md
audit_report/: FINAL_SUMMARY.txt  chunking_test.txt  fresh_run_test.txt  module_contract.txt  profile_test.txt  resume_test.txt
cli/: __init__.py  main.py  run.py
config/: default.yaml  mx150.yaml
core/: mapfree_core.sh
dense/stereo/: fusion.cfg  patch-match.cfg
docs/: PRODUCTION_HARDENING_CHECKLIST.md  ROADMAP_GUI_STABILIZATION.md  architecture.md  build_colmap_mx150.md  coverage_gaps.md
docs/user_guide/: 01_instalasi.md  02_membuat_project.md  03_menjalankan_pipeline.md  04_melihat_hasil.md  05_troubleshooting.md
gui/: README.md  config.json  main.py  main_window.py
gui/templates/: base.html  dashboard.html  dashboard_2.html  dashboard_3.html  dashboard_4.html  dashboard_5.html  dashboard_6.html  dashboard_7.html  dashboard_main.html  export_view.html  gallery.html  gcp.html  map_view.html  point_cloud_classification.html  processing.html  project_new.html  quality_report.html  select_crs.html  settings.html
mapfree/: __init__.py  __main__.py  app.py
mapfree/api/: __init__.py  controller.py
mapfree/application/: __init__.py  controller.py  export_manager.py  license_manager.py  project_manager.py  setup_state.py  state_machine.py
mapfree/cli/: __init__.py  __main__.py  main.py
mapfree/config/: __init__.py  default.yaml
mapfree/core/: __init__.py  chunking.py  config.py  context.py  dependencies.py  engine.py  event_bus.py  events.py  exceptions.py  final_results.py  hardware.py  logger.py  pipeline.py  profiles.py  project_cache.py  project_structure.py  state.py  validation.py  wrapper.py
mapfree/engines/: __init__.py  base.py  base_engine.py  colmap.py  colmap_engine.py  mvs_openmvs.py  openmvs_engine.py
mapfree/geospatial/: __init__.py  georef.py  (+11 more)
pipeline/: __init__.py  colmap_runner.py  exceptions.py  exporter.py  logger.py  project.py  steps.py  utils.py
qa_reports/: dtm_ortho_validate.py  mapfree_field_pre_release_report.md  mapfree_full_validation_report_round2.md  stress_test_runner.py
scripts/: backup_mapfree.sh  build.bat  build_colmap_cuda.sh  build_colmap_mx150.sh  build_colmap_mx150.sh.bak  build_engine.sh  build_linux.sh  build_linux.spec  build_windows.spec  check_geospatial.sh  detect_hardware.sh  fix_pyside6_conda_win.md  install_colmap_from_source.sh  install_colmap_in_venv.sh  install_colmap_windows.md  install_geospatial.sh  install_windows.bat  install_windows.ps1  mapfree_auto.sh  mapfree_gui.sh  mapfree_launcher.bat  run_mapfree_mx150.sh  setup_environment.sh  setup_popos.sh
tasks/: MapFree_Roadmap_v2.md  RELEASE_v1.1.0_checklist.md  fase1_stabilisasi.md  fase2_fitur.md  fase3_produksi.md  fase_v1.1.1_bugfix_ux.md  fase_v1.1_installer.md
tests/: conftest.py  test_chunking_logic.py  test_chunking_regression.py  test_colmap_params.py  test_engine_wrapper.py  test_fresh_run.py  test_profiles.py  test_progress_tracking.py  test_resume_engine.py  test_stubs.py  test_viewer_load_mesh.py  test_viewer_load_ply.py
(+164 files in other folders)
