[project]
name = "mapfree"
version = "0.2.0"
dependencies = [
    "PySide6",
    "PyYAML>=6.0",
    "psutil>=5.0",
]

[project.scripts]
mapfree = "mapfree.cli.main:main"

[tool.setuptools.packages.find]
include = ["mapfree*", "gui*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
