[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapfree"
version = "0.1.0"
description = "Modular photogrammetry pipeline engine (CLI + Qt GUI)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "MapFree Contributors" }]
keywords = ["photogrammetry", "colmap", "3d-reconstruction", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "PySide6>=6.5.0",
    "PyYAML>=6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["flake8>=6.0"]

[project.scripts]
mapfree = "mapfree.application.cli.main:main"

[tool.setuptools.packages.find]
include = ["mapfree*"]
