[metadata]
name = mapfree
description = Modular photogrammetry pipeline engine (CLI + Qt GUI)
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
include = mapfree*

[flake8]
max-line-length = 100
extend-ignore = E203, W503, E501
exclude = .git,__pycache__,build,dist,venv,.venv,*.egg-info
per-file-ignores =
    __init__.py:F401
